fix ios7 statusbar z-index

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -4,7 +4,7 @@
     height:20px;
     background-color: #357EC7;
     position:fixed;
-    z-index:100;
+    z-index:1000;
 }
 
 .ios7 .ui-page
